# dev-skills

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.claude-plugin/: marketplace.json
.github/workflows/: agent-skills-catalog-dispatch.yml  ci.yml
archive/skills/: README.md
bootstrap/packs/: codex-agent-repo.json  rust-cli-agent-repo.json
catalog/: agent-skills-lab.json
crates/bun-platform/: Cargo.toml
crates/bun-platform-core/: Cargo.toml
crates/bun-platform-core/fixtures/docker/: package.json
crates/bun-platform-core/fixtures/github-actions/: package.json
crates/bun-platform-core/fixtures/github-actions/.github/workflows/: ci.yml
crates/bun-platform-core/fixtures/jsonc-tsconfig/: package.json  tsconfig.json
crates/bun-platform-core/fixtures/mixed-lockfiles/: package.json
crates/bun-platform-core/fixtures/monorepo/: package.json
crates/bun-platform-core/fixtures/validate-success/: package.json
crates/bun-platform-core/fixtures/vercel-next/: package.json
crates/bun-platform-core/src/: audit.rs  config.rs  context.rs  fixes.rs  lib.rs  output.rs  release_sync.rs  state.rs  types.rs
crates/bun-platform-core/tests/: bun_dev_drift.rs  bun_platform.rs  rule_detector_parity.rs
crates/bun-platform/src/: main.rs
crates/bun-platform/tests/: cli_contract.rs
crates/bun-platform/tests/golden/: benchmark-help.txt  help.txt  release-sync-help.txt
crates/codex-dev/: Cargo.toml
crates/codex-dev-core/: Cargo.toml
crates/codex-dev-core/src/: kimi_sync.rs  lib.rs
crates/codex-dev-core/src/kimi_sync/: collect.rs  config.rs  mirror.rs  tests.rs
crates/codex-dev-tui/: Cargo.toml
crates/codex-dev-tui/src/: lib.rs  main.rs
crates/codex-dev/src/: bun.rs  lib.rs  main.rs  review_workflow.rs
crates/codex-dev/tests/: cli.rs
crates/codex-dev/tests/snapshots/: policy_profiles.tsv
crates/codex-research/: Cargo.toml
crates/codex-research/evals/research/: core.json
crates/codex-research/src/: bundle.rs  cache.rs  cache_store.rs  cli.rs  config.rs  context7.rs  doctor.rs  eval.rs  fetch.rs  firecrawl.rs  github.rs  ledger.rs  ledger_store.rs  main.rs  models.rs  plan.rs  privacy.rs  provider_http.rs  routing.rs  run.rs  run_state.rs  settings.rs  tests.rs  utils.rs
crates/expo-motion-audit/: Cargo.toml
crates/expo-motion-audit-core/: Cargo.toml
crates/expo-motion-audit/src/: main.rs
crates/gsap-audit/: Cargo.toml
crates/gsap-audit-core/: Cargo.toml
crates/gsap-audit-core/src/: analyze.rs  lib.rs  output.rs  rules.rs  scan.rs  source.rs  types.rs
crates/gsap-audit-core/tests/: rules.rs
crates/gsap-audit/src/: main.rs
crates/motion-token-audit/: Cargo.toml
crates/motion-token-audit-core/: Cargo.toml
crates/motion-token-audit/src/: main.rs
docs/: index.md
docs/architecture/: overview.md  research-system.md
docs/cookbooks/: claude-code-motion-plugins.md  context7-source-validation.md  deep-research-workflow.md  evidence-ledgers.md  github-archaeology.md  memory-guidance-proposals.md  repo-bootstrap-packs.md  subagent-fanout.md
docs/guides/: onboarding.md
docs/prompts/: codex-scenario-prompts.md
docs/reference/: agent-skills-catalog-pipeline.md  ai-stack-scanner.md  bun-platform.md  codex-dev-cli.md  codex-dev-core.md  codex-dev-tui.md  codex-research-cli.md  codex-research-crate.md  deep-researcher-skill.md  distribution-surface-gates.md  expo-motion-audit.md  gsap-audit.md  kimi-ui-agent.md  motion-token-audit.md  rust-skill-suite.md  skill-subagent-eval-lab.md  subagent-creator.md  subagent-templates.md  subspawn.md  ui-audit-schema.md
docs/runbooks/: global-cli-workflow.md  local-release-supply-chain.md  maintenance.md  troubleshooting.md  validation.md
docs/specs/: codex-dev-operating-layer.md  codex-dev-pr-agent-safety-model.md  codex-research-v0.2.md  dev-skills-v0.3-roadmap.md  future-local-surfaces.md
skills/agents-md-maintainer/: SKILL.md
skills/ai-sdk-agents/: SKILL.md
skills/ai-sdk-core/: SKILL.md
skills/ai-sdk-ui/: SKILL.md
skills/autoreview/: SKILL.md
skills/aws-architecture/: SKILL.md
skills/batch-grill-with-docs/: SKILL.md
skills/browser-workbench-setup/: SKILL.md
skills/bun-audit/: SKILL.md
skills/bun-dev/: SKILL.md
skills/caveman-compress/: SKILL.md
skills/codex-delegate/: SKILL.md
skills/codex-review/: SKILL.md
skills/codex-utils/: SKILL.md
skills/commit/: SKILL.md
skills/context7-research/: SKILL.md
skills/convex-audit/: SKILL.md
skills/convex-component-adoption-planner/: SKILL.md
skills/convex-feature-spec/: SKILL.md
skills/dash-audit/: SKILL.md
skills/deep-researcher/: SKILL.md
skills/design-motion-audit/: SKILL.md
skills/design-motion-system/: SKILL.md
skills/dmc-best-practices/: SKILL.md
skills/dmc-py/: SKILL.md
skills/docker-architect/: SKILL.md
skills/docs-align/: SKILL.md
skills/expo-motion/: SKILL.md
skills/firecrawl/: SKILL.md
skills/gh-deps-intel/: SKILL.md
skills/gh-pr-review-fix/: SKILL.md
skills/grill-me/: SKILL.md
skills/gsap/: SKILL.md
skills/kimi-ui-advisor/: SKILL.md
skills/kimi-ui-agent/: SKILL.md  package.json  tsconfig.json
skills/multi-model-review/: SKILL.md
skills/new-branch/: SKILL.md
skills/opensrc/: SKILL.md
skills/opensrc-inspect/: SKILL.md
skills/platform-architect/: SKILL.md
skills/pre-mortem/: SKILL.md
skills/repo-context-builder/: SKILL.md
skills/repo-docs-align/: SKILL.md
skills/repo-modernizer/: SKILL.md
skills/review-remediation/: SKILL.md
skills/rust-cli-clap/: SKILL.md
skills/rust-expert/: SKILL.md
skills/rust-tauri-apps/: SKILL.md
skills/rust-tui-ratatui/: SKILL.md
skills/rust-web-services/: SKILL.md
skills/sentry-cli-fix-issues/: SKILL.md
skills/sentry-triage-to-pr/: SKILL.md
skills/ship-branch/: SKILL.md
skills/signr-pr-closure-loop/: SKILL.md
skills/streamdown/: SKILL.md
skills/streamlit-master-architect/: SKILL.md
skills/subagent-creator/: SKILL.md
skills/subspawn/: SKILL.md
skills/supabase-ts/: SKILL.md
skills/tanstack-integration/: SKILL.md
skills/tanstack-query/: SKILL.md
tools/: retire-grilling.py
(+1326 files in other folders)
