[workspace]
members = [
    "crates/bun-platform-core",
    "crates/bun-platform",
    "crates/codex-dev-core",
    "crates/codex-dev",
    "crates/codex-dev-tui",
    "crates/codex-research",
    "crates/expo-motion-audit-core",
    "crates/expo-motion-audit",
    "crates/gsap-audit-core",
    "crates/gsap-audit",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/BjornMelin/dev-skills"
