[package]
name = "bun-platform-core"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Bun platform audit and maintenance library for dev-skills"

[dependencies]
anyhow = "1.0"
directories = "6.0"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
walkdir = "2.5"
