[package]
name = "bun-platform"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone Bun platform audit and remediation compatibility shim for dev-skills"

[dependencies]
anyhow = "1.0"
bun-platform-core = { path = "../bun-platform-core" }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
serde_json = "1.0"
