[package]
name = "codex-dev-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared codex-dev task capsule contracts and read models"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.23"
