[package]
name = "codex-dev-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui workbench for codex-dev task capsules"

[[bin]]
name = "codex-dev-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
codex-dev = { path = "../codex-dev" }
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.23"
