[package]
name = "codex-dev"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Development operating-layer helper for Codex task capsules"

[[bin]]
name = "codex-dev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
