[package]
name = "codex-dev"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Development operating-layer helper for Codex task capsules"

[[bin]]
name = "codex-dev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bun-platform-core = { path = "../bun-platform-core" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
codex-dev-core = { version = "0.1.0", path = "../codex-dev-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
