[package]
name = "codex-research"
version = "0.2.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Evidence-first research helper for Codex skills and subagents"

[[bin]]
name = "codex-research"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
directories = "6.0"
reqwest = { version = "0.13", features = ["json", "query", "rustls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "process"] }
toml = "0.8"
url = "2.5"
