[package]
name = "expo-motion-audit"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Static auditor for Expo/React Native motion code (Reanimated 4) and config"

[[bin]]
name = "expo-motion-audit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
expo-motion-audit-core = { path = "../expo-motion-audit-core" }
serde_json = "1.0"
