[package]
name = "gsap-audit"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Static auditor for GSAP usage anti-patterns in JS/TS source"

[[bin]]
name = "gsap-audit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
gsap-audit-core = { path = "../gsap-audit-core" }
serde_json = "1.0"
