[package]
name = "motion-token-audit"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Static auditor for cross-stack motion token drift"

[[bin]]
name = "motion-token-audit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
motion-token-audit-core = { path = "../motion-token-audit-core" }
serde_json = "1.0"
